# Computing-and-Simulation-for-Autonomy

./: README.md
Capstone Project Proposal/: Capstone Project Proposal.docx
HW1/: Homework 1.docx
HW1/Chinmay/: HPC for Sim2Real.docx  Homework 1.docx
HW1/Chinmay/code/: base.ipynb  batch_size.ipynb  improve.ipynb  two_gpu.ipynb
HW1/Tanmay/: HPC for Real2Sim.docx
HW1/Tanmay/code/: accuracy.ipynb  base.ipynb  batch_size.ipynb  dual_gpu.ipynb
HW2/: Homework 2.docx
HW2/Chinmay/: CMakeLists.txt  README.md  build.sh  clean.sh  run_q1.sh  run_q2.sh
HW2/Chinmay/src/: Q1_Vectors.cpp  Q2_Reference_vs_Value.cpp
HW2/Tanmay/: Q1  Q1.cpp  Q2  Q2.cpp  README.md
HW3/: Homework 3.docx
HW3/Chinmay/: ExtraQuestion1.py  ExtraQuestion2.py  ExtraQuestion3.py  ExtraQuestion4.py  ExtraQuestion5.py  ExtraQuestion6.py  HW3_Chinmay.docx  Question1.py  Question2.py  Question3.py  Question4.py  Question5.py  Question6.py  Question7.py  Question8.py  README.md
HW3/Chinmay/Map Path Search/: a_star_occupancy.py  a_star_quadtree.py  dijkstra_occupancy.py  dijkstra_quadtree.py
HW3/Tanmay/: Q1  Q1.cpp  Q1~  Q2  Q2.cpp  Q3  Q3.cpp  Q4  Q4.cpp  Q5  Q5.cpp  Q6  Q6.cpp  Q7  Q7.cpp  Q8  Q8.cpp  README.md
HW3/Tanmay/map-path-search/: a_star_quadtree.py  dijkstra_occupancy.py  dijkstra_quadtree.py  occupancy_map_8n.py  quadtree_map_8n.py
HW4/Chinmay/: HW4.ipynb  base_cnn.pt  cnn_model_2.pt  cnn_model_4.pt
HW4/Tanmay/: HW4.ipynb
Project Report/: AutoDRIVE.aux  AutoDRIVE.bbl  AutoDRIVE.blg  AutoDRIVE.out  AutoDRIVE.tex  References.bib
Project Workspace/: README.md
(+2 files in other folders)
